--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-entsoe": "^0.4.12",
     "swagger-ui-express": "^4.1.6"
