--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "express-entsoe": "^0.4.12",
+    "express-entsoe": "^0.5.2",
     "swagger-ui-express": "^4.1.6"
   },
   "name": "express-entsoe-swagger",
@@ -10,7 +11,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "env-cmd -f .prod node index.js",
+    "start:dev": "env-cmd -f .dev node index.js"
   },
   "author": "",
   "license": "ISC",
