--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "express-entsoe": "^0.5.11",
+    "express-entsoe": "^0.5.19",
     "swagger-ui-express": "^4.1.6"
   },
   "name": "express-entsoe-swagger",
@@ -12,7 +12,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "env-cmd -f .prod node index.js",
-    "start:dev": "env-cmd -f .dev node index.js"
+    "start:dev": "env-cmd -f .dev node index.js",
+    "start:local": "env-cmd -f .local node index.js"
   },
   "author": "",
   "license": "ISC",
